# generator-eos

./: .npmrc  LICENSE  README.md  package.json
generators/app/: index.js
generators/app/templates/: .development.env  .production.env  .testnet.env  README.md  _package.json  config.js  utils.js
generators/app/templates/actions/: transfer.js
generators/app/templates/contract/: CMakeLists.txt  CONTRACT.cpp  CONTRACT.hpp  CONTRACT.init_rc.md
generators/app/templates/scripts/: deploy.js  dump_tables.js  init.js  table.js
generators/app/templates/scripts/create_actions/: action.template.js  index.js  transfer.js
generators/app/templates/scripts/init_blockchain/: index.js
generators/app/templates/tests/: test.test.js
generators/app/templates/utils/: deploy.js  others.js
generators/eos/templates/: LICENSE  README.md  config.js
generators/eos/templates/scripts/: deploy.js
